@@ -1,3 +1,9 @@
+2004-04-27  Rodney Dawes  <dobey@ximian.com>
+
+	* gnome-wp-capplet.c (gnome_wp_file_open_dialog):
+	(wallpaper_properties_init): Remove the #if checks for GTK+ 2.3.0 and
+	get rid of the compatibility code for building against 2.2
+
 2004-04-24  Rodney Dawes  <dobey@ximian.com>
 
 	* gnome-wp-capplet.c (wallpaper_properties_init): Use the more correct
